<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_12sdp"
    android:scrollbars="none"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:id="@+id/musicNote"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_240sdp"
            android:src="@drawable/music_note"
            android:background="@color/black"
            android:contentDescription="@string/music_note"/>
        <TextView
            android:id="@+id/songName"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:fadingEdge="horizontal"
            android:textSize="@dimen/_16ssp"
            android:textColor="#a7a7a7"/>
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp">
            <ImageView
                android:id="@+id/previous"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/previous"
                android:contentDescription="@string/previous" />
            <ImageView
                android:id="@+id/pause_play"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/pause"
                android:contentDescription="@string/pause_play"/>
            <ImageView
                android:id="@+id/next"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/next"
                android:contentDescription="@string/next"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/shuffle"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/shuffle"
            android:contentDescription="@string/shuffle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zenplayer"
            android:textSize="@dimen/_12ssp"
            android:textColor="#a7a7a7"
            android:layout_marginTop="@dimen/_12sdp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>