<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/song_library"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:src="@drawable/library_music"
        android:contentDescription="@string/music_library"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_library"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_4sdp"/>

        <ImageView
            android:id="@+id/video_library"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/video_library"
            android:layout_marginTop="@dimen/_60sdp"
            android:contentDescription="@string/video_library"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_library_1"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_4sdp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>